test: add unit tests for job management and execution functionality